0039-COMBINATION-SUM Stats: Time: 2 ms (83.84%), Space: 44.8 MB (31.44%) - LeetHub